--- a/css/jq-quickvalidate.css
+++ b/css/jq-quickvalidate.css
@@ -57,9 +57,19 @@
     padding: .8em 1.2em;
     width: 120px;
     font-size: 12px;
-    background: #222;
+    text-shadow: 1px 1px 0 rgba(0,0,0,.5);
+    background: #313b53;
+    background: -moz-linear-gradient(top, #313b53 0%, #4b5469 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#313b53), color-stop(100%,#4b5469));
+    background: -webkit-linear-gradient(top, #313b53 0%,#4b5469 100%);
+    background: -o-linear-gradient(top, #313b53 0%,#4b5469 100%);
+    background: -ms-linear-gradient(top, #313b53 0%,#4b5469 100%);
+    background: linear-gradient(top, #313b53 0%,#4b5469 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#313b53', endColorstr='#4b5469',GradientType=0 );
     color: white;
     border-radius: 0 3px 3px 3px;
+    border-bottom: 1px solid #313b53;
+    box-shadow: 0 1px 1px rgba(0,0,0,.3);
 }
 #my-form .error:after {
     content: "";
@@ -68,5 +78,5 @@
     left: -20px;
     border-style: solid;
     border-width: 0 10px 10px 10px;
-    border-color: transparent #222 transparent transparent;
+    border-color: transparent #313b53 transparent transparent;
 }
