--- a/css/jq-quickvalidate.css
+++ b/css/jq-quickvalidate.css
@@ -10,6 +10,8 @@
 
     User config:
     
+    * use same units
+    
 ------------------------------------------------------ */
 /*---------------------------------------------------- *//*
 
@@ -28,7 +30,7 @@
 /*------------------------------------------------------ */
 #my-form {
   visibility: hidden;
-  font-size: 15px;
+  font-size: 100%;
 }
 #my-form p {
   float: left;
@@ -44,7 +46,8 @@
 }
 #my-form label {
   padding-right: 1.7em;
-  text-align: right;
+  text-align: left;
+  width: 80px;
 }
 #my-form input[type="text"],
 #my-form input[type="password"],
@@ -92,8 +95,9 @@
   /* Same as arrow */
 
   top: 50%;
+  z-index: 999;
   padding: .8em 1.2em;
-  font-size: 12px;
+  font-size: 80%;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
   background: #313b53;
   background: -moz-linear-gradient(top, #313b53 0%, #4b5469 100%);
@@ -123,8 +127,10 @@
   }
   #my-form .error {
     position: inherit;
-    display: inline-block;
-    left: 0;
+    float: left;
+    clear: left;
+    right: 0;
+    margin-right: 0;
     top: 100%;
     margin-top: 4px;
     width: 200px;
