hide error on blur

--- a/css/jq-quickvalidate.less
+++ b/css/jq-quickvalidate.less
@@ -17,7 +17,7 @@
     @font-size: 100%;
     @error-font-size: 80%;
     @label-align: left;
-    @label-width: 80px;
+    @label-width: 5em;
     @input-width: 200px;
     @error-width: 150px;
     @icon-size: 16px;
