--- a/css/jq-quickvalidate.css
+++ b/css/jq-quickvalidate.css
@@ -47,7 +47,7 @@
 #my-form label {
   padding-right: 1.7em;
   text-align: left;
-  width: 80px;
+  width: 5em;
 }
 #my-form input[type="text"],
 #my-form input[type="password"],
@@ -70,10 +70,10 @@
   width: 16px;
 }
 #my-form .valid-icon {
-background: url(http://i46.tinypic.com/28cmt7b.png) no-repeat;
+  background: url(../img/valid.png) no-repeat;
 }
 #my-form .invalid-icon {
-background: url(http://i49.tinypic.com/15pswee.png) no-repeat;
+  background: url(../img/invalid.png) no-repeat;
   cursor: pointer;
 }
 #my-form input.invalid {
