--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 body {
-    margin: 50px;
     font: normal 15px/1.5 Arial;
 }
 h1, h2 { margin: 0; line-height: 1.1em; }
@@ -9,7 +8,10 @@ h2 {
     font-size: 24px;
     margin-bottom: 30px;
 }
-
+#my-form {
+    margin: 50px;
+    visibility: hidden;
+}
 .invalid-submit {
     position: relative;
     width: 400px;
@@ -33,6 +35,8 @@ h2 {
 button {
     font-size: 13px;
     padding: .4em 1.4em;
+    margin-right: .5em;
+    margin-bottom: 1em;
     border: 1px solid #bbb;
     border-radius: 3px;
     color: #444;
