--- a/css/jq-quickvalidate.css
+++ b/css/jq-quickvalidate.css
@@ -1,192 +1,20 @@
-/* --------------------------------------------------------
-
-    jq-quickvalidate 1.2
-
-    * Author: Cedric Ruiz
-    * License: GPLv2
-    * Website: https://github.com/elclanrs/jq-quickvalidate
-
-/* ----------------------------------------------------- */
-/* ##################################################### *//* #############    User config:    #################### *//* ##################################################### *//* --------------------------------------------------------
-
-    Dimensions:
-    
-    * use same units
-
-/*------------------------------------------------------ */
-/*--------------------------------------------------------
-
-    Theme:
-
-------------------------------------------------------- */
-/*--------------------------------------------------------
-
-    Extra:
-
-------------------------------------------------------- */
-/*--------------------------------------------------------
-/* #################################################### *//* ##############    end user config    ############### *//* #################################################### *//*--------------------------------------------------------
-
-    Careful from here on...
-
-    jQuery data:
-
-------------------------------------------------------- */
-.qval-field-width {
-  width: 407px;
-}
-/*--------------------------------------------------------
-
-    Mixins:
-
-------------------------------------------------------- */
-/*---------------------------------------------------- */
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.qval-form {
-  font-size: 15px;
-  /* ----------------------------------------------------
-
-    Responsive
-
------------------------------------------------------- */
-
-}
-.qval-form p {
-  float: left;
-  clear: both;
-  position: relative;
-  margin: .5em 0;
-}
-.qval-form label,
-.qval-form input,
-.qval-form .field {
-  float: left;
-  position: relative;
-}
-.qval-form label {
-  padding-right: 1.7em;
-  text-align: left;
-}
-.qval-form input[type="text"],
-.qval-form input[type="password"],
-.qval-form textarea {
-  padding: .3em;
-  width: 225px;
-  border: 1px solid #ccc;
-  outline: 0;
-}
-.qval-form .valid-icon,
-.qval-form .invalid-icon {
-  position: absolute;
-  top: 50%;
-  margin-top: -8px;
-  right: -24px;
-  height: 16px;
-  width: 16px;
-}
-.qval-form textarea ~ .valid-icon,
-.qval-form textarea ~ .invalid-icon {
-  top: 7.5px;
-  /* Aproximation */
-
-  margin-top: 0;
-}
-.qval-form .valid-icon {
-  background: url("../img/valid.png") no-repeat;
-}
-.qval-form .invalid-icon {
-  background: url("../img/invalid.png") no-repeat;
-  cursor: pointer;
-}
-.qval-form input.invalid {
-  background: #fffbd4;
-  color: #3b3600;
-  border: 1px solid #d4c000;
-}
-.qval-form input.valid {
-  background: #edfcd9;
-  color: #223904;
-  border: 1px solid #78c610;
-}
-.qval-form .error {
-  position: absolute;
-  width: 150px;
-  right: -182px;
-  margin-right: -10px;
-  /* Same as arrow border-width */
-
-  top: 15px;
-  z-index: 999;
-  padding: .8em 1.2em;
-  font-size: 80%;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
-  background: #183e59;
-  background: -webkit-gradient(linear, left top, left bottom, from(#183e59), to(#235a81));
-  background: -moz-linear-gradient(center top, #183e59 0%, #235a81 100%);
-  background: -moz-gradient(center top, #183e59 0%, #235a81 100%);
-  color: white;
-  border-bottom: 1px solid #183e59;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
-}
-.qval-form .error:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -19.42857142857143px;
-  /* `-1` to fix gap */
-
-  border-style: solid;
-  border-width: 0 10.714285714285715px 10.714285714285715px 10.714285714285715px;
-  border-color: transparent #183e59 transparent transparent;
-}
-.qval-form.stack .field,
-.qval-form.stack .error {
-  width: 87.54863813229572%;
-}
-.qval-form.stack p,
-.qval-form.stack input[type="text"],
-.qval-form.stack input[type="password"],
-.qval-form.stack textarea {
-  width: 100%;
-  max-width: 337.5px;
-}
-.qval-form.stack label {
-  text-align: left;
-  padding-bottom: .3em;
-}
-.qval-form.stack .error {
-  position: inherit;
-  float: left;
-  clear: left;
-  right: 0;
-  margin-right: 0;
-  top: 100%;
-  margin-top: 4px;
-}
-.qval-form.stack .error:after {
-  /* IE8 hack force refresh */
-
-  content: ".";
-  line-height: 0;
-  text-indent: -9999px;
-  /**/
-
-  position: absolute;
-  top: 0;
-  margin-top: -16px;
-  left: 50%;
-  margin-left: -8px;
-  border-style: solid;
-  border-width: 8px 8px 8px 8px;
-  border-color: transparent transparent #183e59 transparent;
-}
-.qval-form.stack .valid-icon,
-.qval-form.stack .invalid-icon {
-  float: right;
-}
+.qval-field-width{width:407px;}
+*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
+.qval-form{font-size:15px;}.qval-form p{float:left;clear:both;position:relative;margin:.5em 0;}
+.qval-form label,.qval-form input,.qval-form .field{float:left;position:relative;}
+.qval-form label{padding-right:1.7em;text-align:left;}
+.qval-form input[type="text"],.qval-form input[type="password"],.qval-form textarea{padding:.3em;width:225px;border:1px solid #ccc;outline:0;}
+.qval-form .valid-icon,.qval-form .invalid-icon{position:absolute;top:50%;margin-top:-8px;right:-24px;height:16px;width:16px;}
+.qval-form textarea~.valid-icon,.qval-form textarea~.invalid-icon{top:7.5px;margin-top:0;}
+.qval-form .valid-icon{background:url("../img/valid.png") no-repeat;}
+.qval-form .invalid-icon{background:url("../img/invalid.png") no-repeat;cursor:pointer;}
+.qval-form input.invalid{background:#fffbd4;color:#3b3600;border:1px solid #d4c000;}
+.qval-form input.valid{background:#edfcd9;color:#223904;border:1px solid #78c610;}
+.qval-form .error{position:absolute;width:150px;right:-182px;margin-right:-10px;top:15px;z-index:999;padding:.8em 1.2em;font-size:80%;text-shadow:1px 1px 0 rgba(0, 0, 0, 0.5);background:#183e59;background:-webkit-gradient(linear, left top, left bottom, from(#183e59), to(#235a81));background:-moz-linear-gradient(center top, #183e59 0%, #235a81 100%);background:-moz-gradient(center top, #183e59 0%, #235a81 100%);color:white;border-bottom:1px solid #183e59;-webkit-box-shadow:0px 1px 1px rgba(0, 0, 0, 0.3);-moz-box-shadow:0px 1px 1px rgba(0, 0, 0, 0.3);box-shadow:0px 1px 1px rgba(0, 0, 0, 0.3);}
+.qval-form .error:after{content:"";position:absolute;top:0;left:-19.42857142857143px;border-style:solid;border-width:0 10.714285714285715px 10.714285714285715px 10.714285714285715px;border-color:transparent #183e59 transparent transparent;}
+.qval-form.stack .field,.qval-form.stack .error{width:87.54863813229572%;}
+.qval-form.stack p,.qval-form.stack input[type="text"],.qval-form.stack input[type="password"],.qval-form.stack textarea{width:100%;max-width:337.5px;}
+.qval-form.stack label{text-align:left;padding-bottom:.3em;}
+.qval-form.stack .error{position:inherit;float:left;clear:left;right:0;margin-right:0;top:100%;margin-top:4px;}
+.qval-form.stack .error:after{content:".";line-height:0;text-indent:-9999px;position:absolute;top:0;margin-top:-16px;left:50%;margin-left:-8px;border-style:solid;border-width:8px 8px 8px 8px;border-color:transparent transparent #183e59 transparent;}
+.qval-form.stack .valid-icon,.qval-form.stack .invalid-icon{float:right;}
